# fullstack-test-task

./: README.md
backend/: pyproject.toml
backend/migrations/versions/: 285a9389b974_cascade_delete_alerts_when_file_is_.py  e9896d8889fc_add_index_on_alerts_file_id.py
backend/src/: app.py  db.py  models.py  service.py  tasks.py
backend/src/repositories/: alert_repository.py  file_repository.py
backend/src/routers/: alerts.py  files.py
backend/src/services/: alert_service.py  file_service.py
frontend/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/api/: alerts.ts  client.ts  files.test.ts  files.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AlertsTable.tsx  FilesTable.tsx  UploadFileModal.tsx
frontend/src/hooks/: useAlerts.ts  useFiles.test.ts  useFiles.ts  useUploadFile.ts
frontend/src/lib/: format.test.ts
